--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <div class="container">
       <div class="row">
-        <div class="col col-12 col-md-6">
+        <div class="col col-12 col-sm-6">
           <img class="dice col1" src="dice6.png" alt="">
         </div>
-        <div class="col col-12 col-md-6">
+        <div class="col col-12 col-sm-6">
           <img class="dice col2" src="dice6.png" alt="">
         </div>
         </div>
